--- a/Views/Home/Vendors.cshtml
+++ b/Views/Home/Vendors.cshtml
@@ -17,27 +17,27 @@
                                         <div class="form-group">
                                             <label for="usr">Vendor Name<span>*</span></label>
                                             <input type="text" name="name" class="form-control" id="usr">
-                                            <span class="error-msg1"></span>
+                                            <span class="Error-show error-msg1"></span>
                                         </div>
                                         <div class="form-group">
                                             <label for="usr">Contact Name<span>*</span></label>
                                             <input type="text" name="contactname" class="form-control" id="usr">
-                                            <span class="error-msg1"></span>
+                                            <span class="Error-show error-msg1"></span>
                                         </div>
                                         <div class="form-group">
                                             <label for="number">Mobile Number<span>*</span></label>
                                             <input type="tel" name="phone" id="phone" name="phone" class="form-control">
-                                            <span class="error-msg1"></span>
+                                            <span class="Error-show error-msg1"></span>
                                         </div>
                                         <div class="form-group">
                                             <label for="comment">Address<span>*</span></label>
                                             <textarea class="form-control" name="address" rows="3" id="comment"></textarea>
-                                            <span class="error-msg1"></span>
+                                            <span class="Error-show error-msg1"></span>
                                         </div>
                                         <div class="form-group">
                                             <label for="comment">Remark</label>
                                             <textarea class="form-control" name="remark" rows="3" id="comment"></textarea>
-                                            <span class="error-msg1"></span>
+                                            <span class="Error-show error-msg1"></span>
                                         </div>
                                     </div>
                                     <div class="vendors-buttons-wrap">
