--- a/Views/Home/MyRequests.cshtml
+++ b/Views/Home/MyRequests.cshtml
@@ -266,22 +266,22 @@
                 <!-- Modal body -->
                 <div class="modal-body">
                     <div id="timelinebodyedit">
-                        <form>
+                        <form class="myrequestpage">
                             <div class="form-group">
                                 <div class="row">
                                     <div class="col-6"> 
                                         <label for="recipient-name" class="col-form-label">Item Name:</label>
-                                        <input type="text"  disabled="disabled" class="form-control quantity " id="ItemName" value="" required>
+                                        <input type="text"  disabled="disabled" class="form-control quantity " id="product_name" value="" required>
                                     </div>
                                     <div class="col-6"> 
                                         <label for="recipient-name" class="col-form-label">Oty:</label>
-                                        <input type="number"  min="1" class="form-control quantity quantity" id="iteminput1" value="" required>
+                                        <input type="number"  min="1" class="form-control quantity quantity" id="intial_qty" value="" required>
                                     </div>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <div class="">
-                                        <select class="form-control DeliveryPriority DeliveryPriority" data-obj="" placeholder="Delivery Priority*" id="iteminput2">
+                                        <select class="form-control DeliveryPriority DeliveryPriority" data-obj="" placeholder="Delivery Priority*" id="delivery_priority">
                                             <option value="High">High</option>
                                             <option value="Medium">Medium</option>
                                             <option value="Low">Low</option>
@@ -291,31 +291,31 @@
                             </div>
                             <div class="form-group">
                                 <label for="message-text" class="col-form-label">Priority days*:</label>
-                                <input type="text" id="iteminput3" disabled name="input1" class="form-control" required>
+                                <input type="text" id="priority_days" disabled name="input1" class="form-control" required>
                                 <p>0 / 3</p>
                                 <span class="error-msg cartdropbox4" id="" style="display: none;">*The DeliveryPriority field is required.</span>
                             </div>
                             <div class="form-group">
                                 <label for="message-text" class="col-form-label">Tracking No*:</label>
-                                <input type="text" class="form-control input1" id="iteminput4" value="test"  required>
+                                <input type="text" class="form-control input1" id="tracking_no" value="test"  required>
                                 <p>0/ 3</p>
                                 <span class="error-msg cartdropbox4"  style="display: none;">*The DeliveryPriority field is required.</span>
                             </div>
                             <div class="form-group">
                                 <label for="message-text" class="col-form-label">Section*:</label>
-                                <input type="text" class="form-control input"id="iteminput5" value="test"  required>
+                                <input type="text" class="form-control input"id="section" value="test"  required>
                                 <p>0 / 20</p>
                                 <span class="error-msg cartdropbox4"  style="display: none;">*The DeliveryPriority field is required.</span>
                             </div>
                             <div class="form-group">
                                 <label for="message-text" class="col-form-label">Reason*:</label>
-                                <textarea class="form-control" id="iteminput6" required></textarea>
+                                <textarea class="form-control" id="reason" required></textarea>
                                 <p>0 / 100</p>
                                 <span class="error-msg cartdropbox4"  style="display: none;">*The DeliveryPriority field is required.</span>
                             </div>
                             <div class="form-group">
                                 <label for="message-text" class="col-form-label">Wher Uesd*:</label>
-                                <textarea class="form-control" id="iteminput7" required></textarea> 
+                                <textarea class="form-control" id="where_used" required></textarea> 
                                 <p>0 / 100</p>
                                 <span class="error-msg cartdropbox4" style="display: none;">*The DeliveryPriority field is required.</span>
                             </div>
@@ -324,7 +324,7 @@
                 </div>
                 <div class="modal-footer" id="modal-footer">
                     <button type="button" class="common-button common-red-button" data-dismiss="modal" onclick="popClose('customModalCenter')">cancel</button>
-                    <button type="button" class="common-button common-blue-button" id="update">Save</button>
+                    <button type="button" class="common-button common-blue-button" data-dismiss="modal" id="update">Save</button>
                 </div>
             </div>
         </div>
